@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>2603</version>
+  <version>2605</version>
   <dependencies>
 	    <dependency>profile-opengever.ogds.base:default</dependency>
   </dependencies>
